--- a/particle/fingerprint/.vscode/settings.json
+++ b/particle/fingerprint/.vscode/settings.json
@@ -4,5 +4,8 @@
     "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}",
     "files.associations": {
         "*.ino": "cpp"
-    }
+    },
+    "particle.targetPlatform": "argon",
+    "particle.firmwareVersion": "1.4.2",
+    "particle.targetDevice": ""
 }
